fix(search): Set black color to be readable on white bg

--- a/www_starts_eu/static/starts_eu/src/sass/modules/_search.scss
+++ b/www_starts_eu/static/starts_eu/src/sass/modules/_search.scss
@@ -127,7 +127,7 @@ $module: ".search";
 
         padding: 1rem 3rem 1rem 0;
         width: 100%;
-        color: white;
+        color: black;
 
         @include font-size(xxl);
         @include typeface(serif);
@@ -150,7 +150,7 @@ $module: ".search";
         outline: 0;
         cursor: pointer;
 
-        color: white;
+        color: black;
 
         @include font-size(xxl);
 
